--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -6,7 +6,7 @@
 
  <div class="container">
    <header class="jumbotron">
-     <h1>Welcome To YelpCamp!</h1>
+     <h1>Welcome To LetsCamp!</h1>
      <p>View our top hand-picked CampGrounds</p>
      <p>
          <a class="btn btn-primary btn-lg" href="/campgrounds/new">Add New CampGround</a>
