--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>YelpCamp</title>
+    <title>LetsCamp</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/landing.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" integrity="sha256-0rguYS0qgS6L4qVzANq4kjxPLtvnp5nn2nB5G1lWRv4=" crossorigin="anonymous"></script>
@@ -27,7 +27,7 @@
     </div>
 
     <div id="landing-header">
-        <h1>Welcome to YelpCamp</h1>
+        <h1>Welcome to LetsCamp</h1>
         <a class="btn btn-lg btn-success" href="/campgrounds">View all CampGrounds</a>
     </div>
     <ul class="slide-show">
