--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>YelpCamp</title>
+    <title>LetsCamp</title>
     <style media="screen">
       img{
         width:500px;
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-default">
       <div class="container">
       <div class="navbar-header">
-      <a class="navbar-brand" href="/">YelpCamp</a>
+      <a class="navbar-brand" href="/">LetsCamp</a>
       </div>
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
       <span class="sr-only">Toggle navigation</span>
